General fixes, added tank/healer holsters, lmao.

--- a/src/content/docs/drs/actions.mdx
+++ b/src/content/docs/drs/actions.mdx
@@ -49,7 +49,7 @@ during every **2 minute** burst to maximize buffs during that window of time. Si
 ### Casters ###
 Using <ActionIcon icon="fom"/>**Font of Magic** or <ActionIcon icon="chainspell"/>**Chainspell** together during every **2 minute** burst to maximize damage. However, 
 one caster per party should bring <ActionIcon icon="cure4"/>**Lost Cure 4**. Cure 4 has a synergy with <ActionIcon icon="elder"/>**Pure Essence of the Elder** that when used,
-anyone healed by it will recieve **Lost Bravery** for 10 seconds. This bravery effect is stronger than the casted effect from the base Lost Bravery action (5%). 
+anyone healed by it will recieve **Lost Bravery** for 60 seconds. This bravery effect is twice as strong as that of Lost Bravery, but must be maintained by casting Cure IV once a minute. 
 It's the choice of that caster to drop <ActionIcon icon="fom"/>**Font of Magic** or drop <ActionIcon icon="chainspell"/>**Chainspell**
 to instead bring <ActionIcon icon="cure4"/>**Lost Cure 4**. Do keep in the mind the pros and cons of both aforementioned actions and plan accordingly (i.e. Bringing Resistance Ether Kits to supplement Font's MP drain).
 
@@ -71,7 +71,7 @@ will slot in <ActionIcon icon="aethershield"/>**Lost Aethershield** and use it o
 
 ### Healers ###
 Healers should use <ActionIcon icon="chainspell"/>**Chainspell** during every **2 minute** burst window. Similar to other roles, you should attempt to put your highest potency skills during these windows
-to maximize your damage. You will also be required to bring multiple utility actions, like Steelsting/Spellforge at Queen's Gurad and Dispel on several fights. 
+to maximize your damage. You will also be required to bring multiple utility actions, like Steelsting/Spellforge at Queen’s Gurad and Dispel on several fights. 
 White Mages can replace <ActionIcon icon="chainspell"/>**Chainspell** with <ActionIcon icon="seraphstrike"/>**Seraph Strike**, which should be used every minute as soon as it comes up
 along with **Thin Air** to negate the MP cost. You will also need to bring <ActionIcon icon="arise"/>**Lost Arise** to raise anyone who has died. 
 Healers should attempt to bring as many arises as they comfortable can.
