--- a/src/content/docs/drs/holsters/caster.mdx
+++ b/src/content/docs/drs/holsters/caster.mdx
@@ -35,7 +35,7 @@ You will only need **one** pure essence each time you enter Delubrum Reginae. Es
 :::
 <br/><hr/>
 
-### Chainspell Cure 4 Holster
+### Chainspell Cure 4
 The basline caster holster. Packing both **Chainspell** and **Cure 4** for the whole instance as it's just that shrimple. **Chainspell** has 20 uses so it will last you the entire instance, no need to bring a second copy of it! As a reminder, please make sure to drift **Chainspell** into the 2 minute buff window as you want to stack
 as many buffs as possible into that short timeframe. **Chainspell** does increase the cost of your spells, but it's nothing that using Lucid Dreaming on cooldown won't fix.
 
@@ -105,7 +105,7 @@ as many buffs as possible into that short timeframe. **Chainspell** does increas
 </div>
 <br/><hr/>
 
-### Font of Magic Cure 4 Holster
+### Font of Magic Cure 4
 This is another basline caster holster. Packing both **Font of Magic** and **Cure 4**. However, due to **Font of Magic's** heavy MP drain, you *need* to bring **Resistance Ether Kits** and keep a close eye on your MP.
 Use **Lucid Dreaming** whenever and also try to keep high uptime on your **Ether Kits** when possible. If you're lucky, a healer will use **Lost Fullcure** and that will solve a majority of your MP problems. But do not bank on this
 during an anyprog environment.
@@ -356,7 +356,7 @@ If you're looking for guides on how to Mimic, please see the note below the hols
 <ActionIcon icon="mimic"/>**Mimic** is used to copy the actions of another player _and_ fully refresh your actions at the same time! To use it, first slot in <ActionIcon icon="mimic"/>**Mimic** and target the player you wish to copy the actions from.
 **Before you use <ActionIcon icon="mimic"/>Mimic**, double check their **Reminiscence** buff! Doing this will ensure you are getting the correct actions. Once ready, use <ActionIcon icon="mimic"/>**Mimic!** After a nifty animation, you'll recieve **both** actions the target had and full charges of both!
 
-**Extra note:** The target will not be effected in anyway. This is how many Delubrum Savage reclears will often smuggle heavier action combinations through the entire instance.
+**Extra note:** The target will not be affected in anyway. This is how many Delubrum Savage reclears will often smuggle heavier action combinations through the entire instance.
 :::
 <br/><hr/>
 
@@ -455,7 +455,7 @@ Remember, **Mimic** does not work in combat!
 <br/><hr/>
 
 ### Magical Excellence Battery
-This holster helps carry **Lost Excellence** through the entire instance. Three players will be volunteer/assigned to carry an extra plate of Excellence to slot in at an assigned fight.
+This holster replaces a **Mimic** with **Lost Excellence** to allow other players to use Mimic on you. Three players will be volunteer/assigned to carry an extra plate of Excellence to slot in at an assigned fight.
 One will carry it for Queen's Guard, Trinity Avowed, and The Queen. Once you have arrived at your assigned fight: slot in **Lost Excellence** over **Lost Cure 4** (keeping **Font of Magic** still) and inform the raid with a message or marking yourself with a triangle head marker to
 signify that you are ready to be mimicked.
 
@@ -544,7 +544,7 @@ together. From there, the fight will go on with you pressing Font/cure4 during e
   </table>
 </div>
 :::danger[Slotting Excellence]
-Make sure to slot in your Excellence at the assigned fight! Slotting it any earlier could cause some awkwardness and force you to hold off on overslotting Excellence for an amount of time.
+Make sure to slot in your Excellence at the assigned fight! Slotting Excellence too early could greatly lower your damage and waste another person's actions.
 :::
 <br/><hr/>
 
