--- a/src/content/docs/drs/holsters/melee.mdx
+++ b/src/content/docs/drs/holsters/melee.mdx
@@ -18,12 +18,12 @@ import Footer from "@components/Footer.astro";
 Melee DPS are the powerhouses of Delubrum Reginae. Along with being some of the highest DPS roles, they are given arguably the strongest (and easiest) to use actions.
 Both actions should be combined together every 2 minute window to maximize their effectiveness.
 
+Your **Pure Essence of the Duelist** synergizes with **Banner of Honored Sacrifice** to extend the banner's duration to a whopping 30 seconds! It also reduces the damage taken from ~16k to merely 1 (one) damage per tick.
+
 Each holster is split into two sections, one as a "pre-load"  holster and an "instance ready" holster. The "pre-load" is for when you first get into the instance. It will contain your pure essence, reraiser, and actions that you will slot in or refresh charges on.
 The "instance ready" holster has _everything_ you will need for the entire instance. It should often contain extra reraisers, spare copies of lost actions you need, and light curtains. It is strongly encouraged that you fill your holster to as close as full as you can.
 
 Some suggestions on what to include to fill space: **Light Curtains**, extra **Resistance Reraisers**, and **Resistance Potions**.
-
-Your **Pure Essence of the Duelist** synergizes with **Banner of Honored Sacrifice** to extend the banner's duration to a whopping 30 seconds! It also reduces the damage taken from ~16k to merely 1 (one) damage per tick.
 
 :::note[Pure Essences]
 You will only need **one** pure essence each time you enter Delubrum Reginae. Essences do persist through death and are only removed if you remove the buff yourself or you leave the instance.
@@ -31,10 +31,10 @@ You will only need **one** pure essence each time you enter Delubrum Reginae. Es
 <br/><hr/>
 
 ### Basic Melee DPS Holster
-This holster is the bread of butter of a melee DPS. Using Font of Power and Banner of Honored Sacrifice together every **2 minute** in the raid buff window will yield the best results. This is the most common bag for new people to bring as it's
+This holster is the bread of butter of a melee DPS. Using Font of Power and Banner of Honored Sacrifice together every **2 minutes** in the raid buff window will yield the best results. This is the most common bag for new people to bring as it's
 economic and easiest to use.
 
-<div class="two-holster-tables" id="dps">
+<div class="two-holster-tables">
   <table class="dps">
   <caption>**Pre-load**</caption>
       <col width="60px" />
@@ -108,7 +108,7 @@ economic and easiest to use.
 
 ### Basic Rend Armor Holster
 A supportive variant of the melee DPS. Renders provide a significant 10% increase to the overall raid's damage. Two players in the alliance will be assigned to run Lost Rend Armor. If assigned, 
-you will replace hsac Banner of Honored Sacrifice with rend Lost Rend Armor and alternate uses with the other assigned rend armor user to maintain 100% buff uptime on the boss(es).
+you will replace **Banner of Honored Sacrifice** with **Lost Rend Armor** and alternate uses with the other assigned rend armor user to maintain 100% buff uptime on the boss(es).
 
 <div class="two-holster-tables">
   <table class="dps">
@@ -263,7 +263,7 @@ If you're looking for guides on how to Mimic, please see the note below the hols
 <ActionIcon icon="mimic"/>**Mimic** is used to copy the actions of another player _and_ fully refresh your actions at the same time! To use it, first slot in <ActionIcon icon="mimic"/>**Mimic** and target the player you wish to copy the actions from.
 **Before you use <ActionIcon icon="mimic"/>Mimic**, double check their **Reminiscence** buff! Doing this will ensure you are getting the correct actions. Once ready, use <ActionIcon icon="mimic"/>**Mimic!** After a nifty animation, you'll recieve **both** actions the target had and full charges of both!
 
-**Extra note:** The target will not be effected in anyway. This is how many Delubrum Savage reclears will often smuggle heavier action combinations through the entire instance.
+**Extra note:** The target will not be affected in anyway. This is how many Delubrum Savage reclears will often smuggle heavier action combinations through the entire instance.
 :::
 <br/><hr/>
 
@@ -352,7 +352,7 @@ Drop the reraisers and add two more **Banner of Honored Sacrifice**. You can res
 <br/><hr/>
 
 ### Physical Excellence Battery
-This holster helps carry **Lost Excellence** through the entire instance. Three players will be volunteer/assigned to carry an extra plate of Excellence to slot in at an assigned fight.
+This holster replaces a **Mimic** with **Lost Excellence** to allow other players to use Mimic on you. Three players will be volunteer/assigned to carry an extra plate of Excellence to slot in at an assigned fight.
 One will carry it for Queen's Guard, Trinity Avowed, and The Queen. Once you have arrived at your assigned fight: slot in **Lost Excellence** over **Banner of Honored Sacrifice** (keeping **Font of Power** still) and inform the raid with a message or marking yourself with a triangle head marker to
 signify that you are ready to be mimicked.
 
@@ -436,7 +436,7 @@ together. From there, the fight will proceed as normal with you pressing Font/Ba
 </div>
 
 :::danger[Slotting Excellence]
-Make sure to slot in your Excellence at the assigned fight! Slotting it any earlier could cause some awkwardness and force you to hold off on overslotting Excellence for an amount of time.
+Make sure to slot in your Excellence at the assigned fight! Slotting Excellence too early could greatly lower your damage and waste another person's actions.
 :::
 
 <Footer />
