--- a/src/content/docs/drs/holsters/phys.mdx
+++ b/src/content/docs/drs/holsters/phys.mdx
@@ -16,15 +16,15 @@ import Footer from "@components/Footer.astro";
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
 Physical Ranged DPS will commonly bring **Lost Dervish** to help provide the raid with a strong crit/damage buff that lasts for 60 seconds. Along with this, they bring **Font of Power** to help supplement their personal damage. Both actions should be used during the **2 minute** raid buff window. 
-This will help maximize the yours and the party's DPS output.
+This will help maximize the yours and the party's DPS output.\
+
+Your **Pure Essence of the Fiendhunter** synergizes with **Lost Cure 2** (the single target instant heal action) to give the **Refresh** buff to your target. Refresh, which in short, is a Lucid Dreaming on steroids. However, it does apply stacks of Slow which increases your recast time (or time between GCDs). It is not advised for new players to bring
+this action at all. While it may look simple, it could be distracting when trying to learn the fights.
 
 Each holster is split into two sections, one as a "pre-load"  holster and an "instance ready" holster. The "pre-load" is for when you first get into the instance. It will contain your pure essence, reraiser, and actions that you will slot in or refresh charges on.
 The "instance ready" holster has _everything_ you will need for the entire instance. It should often contain extra reraisers, spare copies of lost actions you need, and light curtains. It is strongly encouraged that you fill your holster to as close as full as you can.
 
 Some suggestions on what to include to fill space: **Light Curtains**, extra **Resistance Reraisers**, and **Resistance Potions**.
-
-Your **Pure Essence of the Fiendhunter** synergizes with **Lost Cure 2** (the single target instant heal action) to give the **Refresh** buff to your target. Refresh, which in short, is a Lucid Dreaming on steroids. However, it does apply stacks of Slow which increases your recast time (or time between GCDs). It is not advised for new players to bring
-this action at all. While it may look simple, it could be distracting when trying to learn the fights.
 
 :::note[Pure Essences]
 You will only need **one** pure essence each time you enter Delubrum Reginae. Essences do persist through death and are only removed if you remove the buff yourself or you leave the instance.
@@ -185,7 +185,7 @@ If you're looking for guides on how to Mimic, please see the note below the hols
 <ActionIcon icon="mimic"/>**Mimic** is used to copy the actions of another player _and_ fully refresh your actions at the same time! To use it, first slot in <ActionIcon icon="mimic"/>**Mimic** and target the player you wish to copy the actions from.
 **Before you use <ActionIcon icon="mimic"/>Mimic**, double check their **Reminiscence** buff! Doing this will ensure you are getting the correct actions. Once ready, use <ActionIcon icon="mimic"/>**Mimic!** After a nifty animation, you'll recieve **both** actions the target had and full charges of both!
 
-**Extra note:** The target will not be effected in anyway. This is how many Delubrum Savage reclears will often smuggle heavier action combinations through the entire instance.
+**Extra note:** The target will not be affected in anyway. This is how many Delubrum Savage reclears will often smuggle heavier action combinations through the entire instance.
 :::
 <br/><hr/>
 
@@ -280,7 +280,7 @@ Remember, **Mimic** does not work in combat!
 <br/><hr/>
 
 ### Physical Excellence Battery
-This holster helps carry **Lost Excellence** through the entire instance. Three players will be volunteer/assigned to carry an extra plate of Excellence to slot in at an assigned fight.
+This holster replaces a **Mimic** with **Lost Excellence** to allow other players to use Mimic on you. Three players will be volunteer/assigned to carry an extra plate of Excellence to slot in at an assigned fight.
 One will carry it for Queen's Guard, Trinity Avowed, and The Queen. Once you have arrived at your assigned fight: slot in **Lost Excellence** over **Lost Devish** (keeping **Font of Power** still) and inform the raid with a message or marking yourself with a triangle head marker to
 signify that you are ready to be mimicked.
 
@@ -364,7 +364,7 @@ together. From there, the fight will go on with you pressing Font/Dervish during
 </div>
 
 :::danger[Slotting Excellence]
-Make sure to slot in your Excellence at the assigned fight! Slotting it any earlier could cause some awkwardness and force you to hold off on overslotting Excellence for an amount of time.
+Make sure to slot in your Excellence at the assigned fight! Slotting Excellence too early could greatly lower your damage and waste another person's actions.
 :::
 
 <Footer />
